--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         
     </div> 
-    <div class="home-image">
+    <div class="home-img img">
       <img src="image.jpg" alt="Description" class="oval-image" onclick="showImageSource(this)">
     </div>
   </section>
